# F100Lib

./: .gitignore  CMakeLists.txt  README.md  build.sh
.scripts/: build.sh  run.sh
.scripts/testing/: main.cpp
include/: F100Lib.hpp
src/: string.cpp
